<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idLayaut"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.FragmentBlank">


    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </org.osmdroid.views.MapView>

    <TextView
        android:id="@+id/tvTimeSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:background="#80E7DAFC"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:shadowColor="#80BA68C8"
        android:text="@string/time_00_00_00"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAverageSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#80E7DAFC"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:shadowColor="#80BA68C8"
        android:text="@string/average_velocity_0_0_km_h"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeSave" />

    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#80E7DAFC"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:shadowColor="#80BA68C8"
        android:text="@string/distance_0_0_km"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAverageSpeed" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#80E7DAFC"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:shadowColor="#80BA68C8"
        android:text="@string/data_on_track_view"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="227dp"
        tools:layout_editor_absoluteY="54dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fCentr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:src="@drawable/baseline_my_location_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:focusable="true" />


</androidx.constraintlayout.widget.ConstraintLayout>